--- a/app/views/collegelist.html
+++ b/app/views/collegelist.html
@@ -18,7 +18,7 @@
                             <tr>
                                 <th></th>
                                 <th st-sort="name">College Name</th>
-                                <th st-sort="name">Acpt Rate</th>
+                                <th st-sort="acpt_rate">Acpt Rate</th>
                                 <th st-sort="distance">Miles from Home</th>
                                 <th st-sort="location">Location</th>
                                 <th st-sort="locale">Locale</th>
