--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,14 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    <button ng-click="authenticate('facebook')">Sign in with Facebook</button>
+    <button ng-click="authenticate('google')">Sign in with Google</button>
+
+    <button ng-click="authenticate('linkedin')">Sign in with LinkedIn</button>
+    <button ng-click="authenticate('instagram')">Sign in with Instagram</button>
+    <button ng-click="authenticate('twitter')">Sign in with Twitter</button>
+
+    <button ng-click="authenticate('yahoo')">Sign in with Yahoo</button>
+
 </div>
