--- a/app/views/popupTmpl.html
+++ b/app/views/popupTmpl.html
@@ -4,8 +4,8 @@
     <title></title>
 </head>
 <body>
-<h1>Template heading</h1>
-<p>Content goes here</p>
+<h1>Pictures from the selected college</h1>
+<p>Content:</p>
 <!--<img src="images/temp-DeleteMe.jpg"/>-->
 <!--<div ng-repeat="pic in pics.images">-->
     <!--<div><img src="{{pic.src}}"/></div>-->
