--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,4 +11,8 @@
 
     <button ng-click="authenticate('yahoo')">Sign in with Yahoo</button>
 
+
+    <button ng-click="logout()">Log Me Out</button>
+    <button ng-click="checkLoggedIn()">Check Login Status</button>
+
 </div>
