--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -393,6 +393,7 @@
                 <h1>Schools Meeting Criteria:</h1>
                 <!--<div id="odometer" class="odometer">{{collegeCount.count}}</div>-->
                 <!--<div class="odometer" odometer="visitors" odometer-options="{theme: 'digital', duration: 3000}">{{collegeCount.count}}</div>-->
+                <!--this: {{collegeCount}}</br>-->
                 <ng-odometer value="collegeCount"></ng-odometer>
                 <a href="#/collegelist" class="btn btn-primary" role="button">Show me the schools</a>
                 <br><br>
