Adding Search For College Page...

--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -395,7 +395,7 @@
                 <!--<div class="odometer" odometer="visitors" odometer-options="{theme: 'digital', duration: 3000}">{{collegeCount.count}}</div>-->
                 <!--this: {{collegeCount}}</br>-->
                 <ng-odometer value="collegeCount"></ng-odometer>
-                <a href="#/collegelist" class="btn btn-primary" role="button">Show me the schools</a>
+                <a href="#!/collegelist" class="btn btn-primary" role="button">Show me the schools</a>
                 <br><br>
                 <img src="images/temp-DeleteMe.jpg"/>
 
